--- a/site/dashboard/partials/head.ejs
+++ b/site/dashboard/partials/head.ejs
@@ -6,6 +6,15 @@
     body {
         padding-top: 50px;
     }
+    table, th, td {
+  border: 1px solid black;
+}
+th, td {
+  padding: 15px;
+}
+table {
+  border-spacing: 5px;
+}
 </style>
 
 <!-- Main Page -->
