--- a/site/dashboard/partials/header.ejs
+++ b/site/dashboard/partials/header.ejs
@@ -1,22 +1,38 @@
 <!-- views/partials/header.ejs -->
+<style>
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+  width: auto;
+}
 
-<body id="page-top">
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  width: auto;
+}
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="index.html">Reached IO</a>
-        <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <!-- <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
-            </li> -->
-          </ul>
-        </div>
-      </div>
-    </nav>
-    </body>
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+  width: auto;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: rgb(0, 204, 255);
+  color: white;
+  width: auto;
+}
+</style>
+
+<div class="topnav" >
+  <a class="active" href="https://www.reachedcoding.com">ReachedIO</a>
+</div>
