--- a/site/dashboard/partials/header.ejs
+++ b/site/dashboard/partials/header.ejs
@@ -35,4 +35,5 @@
 
 <div class="topnav" >
   <a class="active" href="https://www.reachedcoding.com">ReachedIO</a>
+  <a href="https://www.reachedcoding.com/logout">Logout</a>
 </div>
