--- a/site/dashboard/pages/home.ejs
+++ b/site/dashboard/pages/home.ejs
@@ -34,7 +34,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="/login">Login through discord</a>
+    <a href="/login">Login Through discord</a>
   </div>
 </body>
 
