--- a/site/dashboard/pages/index.ejs
+++ b/site/dashboard/pages/index.ejs
@@ -2,7 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <% include ../partials/head %>
 </head>
@@ -12,29 +11,22 @@
 </header>
 <br>
 <font size="+2">
-    <div class="alert alert-success" role="alert">
 
-    <div class="container">
+    <table style="border:1px solid black;margin-left:auto;margin-right:auto;" class="table-striped table-dark table-hover">
         <% values.forEach(function(value) { %>
-        <div class="row">
-            <div class="col-sm">
-                <%= value.key %></div>
-            <div class="col-sm">
-                <%= value.value %>
-                /div>
-            </div>
-        </div>
-
-            <% }); %>
-    </div></div>
-
-        <br>
+            <tr>
+            <th scope="row"><%= value.key %></th>
+            <th><%= value.value %></th>
+        </tr>
+        <% }); %>
+    </table>
+    <br>
 </font>
 <footer>
-    <font size="+2">
+        <font size="+2">
 
-        <% include ../partials/footer %>
-    </font>
+    <% include ../partials/footer %>
+        </font>
 </footer>
 
 </html>
