--- a/site/dashboard/partials/header.ejs
+++ b/site/dashboard/partials/header.ejs
@@ -1,39 +1,5 @@
 <!-- views/partials/header.ejs -->
-<style>
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-  width: auto;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  width: auto;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-  width: auto;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: rgb(17, 146, 179);
-  color: white;
-  width: auto;
-}
-</style>
-
-<div class=".container-fluid" >
-  <a class="active" href="https://www.reachedcoding.com">ReachedIO</a>
-  <a href="https://dashboard.reachedcoding.com/logout">Logout</a>
-</div>
+<nav class="navbar navbar-light bg-light">
+  <span class="navbar-brand mb-0 h1">ReachedIO</span>
+  <a class="navbar-brand" href="/logout">Logout</a>
+</nav>
