--- a/site/dashboard/partials/header.ejs
+++ b/site/dashboard/partials/header.ejs
@@ -1,5 +1,5 @@
 <!-- views/partials/header.ejs -->
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark bg-dark">
   <span class="navbar-brand mb-0 h1">ReachedIO</span>
   <a class="navbar-brand" href="/logout">Logout</a>
 </nav>
