--- a/site/dashboard/partials/header.ejs
+++ b/site/dashboard/partials/header.ejs
@@ -1,5 +1,5 @@
 <!-- views/partials/header.ejs -->
-
+<div style="background-color: ;"
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="https://www.reachedcoding.com">ReachedIO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,7 +11,7 @@
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/login">Database Entry</a>
+        <a class="nav-link" href="/test">Database Entry</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
