--- a/site/dashboard/pages/home.ejs
+++ b/site/dashboard/pages/home.ejs
@@ -2,66 +2,28 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <% include ../partials/head %>
+  <% include ../partials/head %>
 </head>
 
-<header>
-    <% include ../partials/header %>
-</header>
-
-<style>
-    .container {
-      display: flex;
-      width: 100%;
-      padding: 40px 0;
-      align-items: center;
-      justify-content: center;
-    }
-    
-    .container a {
-      background: #7289DA;
-      padding: 0 20px;
-      line-height: 35px;
-      color: #fff;
-      font-family: 'Helvetica', 'Arial', sans-sefir;
-      font-size: 20px;
-      display: block;
-      text-decoration: none;
-      border-radius: 3px;
-    }
-  </style>
-</head>
-
-<body>
-  <br>
-    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Dark card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-    <div class="card text-center" style="width: 50%;">
-            <div class="card-header">
-              Featured
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href='/login' class="btn btn-primary">Login with Discord</a>
-            </div>
-            <div class="card-footer text-muted">
-              2 days ago
-            </div>
-          </div>
-</body>
-
-<footer>
+<div class="center-screen">
+  <div class="card text-center text-white bg-dark mb-4 mx-auto w-25">
     <font size="+2">
-
-<% include ../partials/footer %>
+      <div class="card-header">
+        <b>Login with Discord</b>
+      </div>
+      <div class="card-body">
+        <a href='/login' class="btn btn-primary">Login</a>
+      </div>
     </font>
+  </div>
+</div>
+<footer>
+  <font size="+2">
+
+    <% include ../partials/footer %>
+  </font>
 </footer>
 
 </html>
