--- a/site/dashboard/partials/footer.ejs
+++ b/site/dashboard/partials/footer.ejs
@@ -1,6 +1,6 @@
 <!-- views/partials/footer.ejs -->
 <section class="copyright py-4 text-center text-white">
-    <div class="container" style="text-align: center;display: inline;" >
+    <div class="container footer" style="text-align: center;display: inline;" >
       <small>Copyright &copy; ReachedIO 2019</small>
     </div>
   </section>
