--- a/site/dashboard/pages/home.ejs
+++ b/site/dashboard/pages/home.ejs
@@ -9,12 +9,12 @@
 
 <div class="center-screen">
   <div class="card text-center text-white bg-dark mb-4 mx-auto w-25">
-    <font size="+2">
+    <font size="+3">
       <div class="card-header">
         <b>Login with Discord</b>
       </div>
       <div class="card-body">
-        <a href='/login' class="btn btn-primary">Login</a>
+        <a href='/login' class="btn" style="background-color: #2C2F33;"><img src="../images/discord.png" width="150" /></a>
       </div>
     </font>
   </div>
