--- a/site/dashboard/pages/home.ejs
+++ b/site/dashboard/pages/home.ejs
@@ -14,7 +14,7 @@
         <b>Login with Discord</b>
       </div>
       <div class="card-body">
-        <a href='/login' class="btn" style="background-color: #2C2F33;"><img src="../images/discord.png" width="150" /></a>
+        <a href='/login' class="btn" style="background-color: #2C2F33;"><img src="../images/discord.png" width="50%" /></a>
       </div>
     </font>
   </div>
