--- a/site/dashboard/pages/home.ejs
+++ b/site/dashboard/pages/home.ejs
@@ -8,15 +8,13 @@
 </head>
 
 <div class="center-screen">
-  <div class="card text-center text-white bg-dark mb-4 mx-auto w-25">
-    <font size="+3">
+  <div class="card text-center text-white bg-dark mb-4 mx-auto h4" style="display: flex;justify-content: center;width: 20rem;">
       <div class="card-header">
         <b>Login with Discord</b>
       </div>
       <div class="card-body">
-        <a href='/login' class="btn" style="background-color: #2C2F33;"><img src="../images/discord.png" width="50%" /></a>
+        <a href='/login' class="btn" style="background-color: #2C2F33;"><img src="../images/discord.png" width="180rem" /></a>
       </div>
-    </font>
   </div>
 </div>
 <footer>
