--- a/site/dashboard/pages/home.ejs
+++ b/site/dashboard/pages/home.ejs
@@ -6,6 +6,11 @@
 <head>
   <% include ../partials/head %>
 </head>
+<div class="container-fluid">
+    <a class="navbar-brand" href=<%- rootUrl -%>>
+  <img src="./../images/logo.svg" class="float-left img-fluid image-cropper" style="width: 5rem; margin: 2rem;">
+</a>
+</div>
 
 <div class="center-screen">
   <div class="card text-center text-white bg-dark mb-4 mx-auto h4" style="display: flex;justify-content: center;width: 20rem;">
