--- a/site/dashboard/partials/head.ejs
+++ b/site/dashboard/partials/head.ejs
@@ -46,6 +46,9 @@
         bottom: 0;
         width: 100%;
     }
+    body, html {
+  height: 100%;
+}
 
     .center-screen {
         display: flex;
@@ -53,7 +56,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        min-height: 50vh;
+        /*min-height: 100vh; */
     }
 
     .image-cropper {
@@ -62,5 +65,18 @@
         position: relative;
         overflow: visible;
         border-radius: 100%;
+    }
+
+    .bg {
+        /* The image used */
+        background-image: url("https://cdn.wallpapersafari.com/45/69/tp9DL2.jpg") !important;;
+
+        /* Full height */
+        height: 100%;
+
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 </style>
