--- a/site/dashboard/partials/head.ejs
+++ b/site/dashboard/partials/head.ejs
@@ -69,7 +69,7 @@
 
     .bg {
         /* The image used */
-        background-image: url("https://cdn.wallpapersafari.com/45/69/tp9DL2.jpg") !important;;
+        background-image: url("./../images/background.jpg") !important;;
 
         /* Full height */
         height: 100%;
