--- a/site/dashboard/partials/footer.ejs
+++ b/site/dashboard/partials/footer.ejs
@@ -1,6 +1,8 @@
 <!-- views/partials/footer.ejs -->
-<section class="copyright py-4 text-center text-white">
-    <div class="container footer h4 bg-dark" style="text-align: center;display: inline;border-radius: 8px;padding: 1rem;">
+<footer class="bg-dark">
+<section class="copyright py-4 text-center text-white bg-dark">
+    <div class="container footer h4 bg-dark" style="text-align: center;height: 50vmin;padding: 1rem;">
       <small>Copyright &copy; ReachedIO 2019</small>
     </div>
   </section>
+</footer>
