--- a/site/dashboard/partials/head.ejs
+++ b/site/dashboard/partials/head.ejs
@@ -79,4 +79,31 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
+
+    .table-curved {
+    border-collapse: separate;
+}
+.table-curved {
+    border-radius: 6px;
+    border-left:0px;
+}
+
+.table-curved th {
+    border-top: none;
+}
+.table-curved th:first-child {
+    border-radius: 6px 0 0 0;
+}
+.table-curved th:last-child {
+    border-radius: 0 6px 0 0;
+}
+.table-curved th:only-child{
+    border-radius: 6px 6px 0 0;
+}
+.table-curved tr:last-child td:first-child {
+    border-radius: 0 0 0 6px;
+}
+.table-curved tr:last-child td:last-child {
+    border-radius: 0 0 6px 0;
+}
 </style>
