--- a/site/dashboard/pages/home.ejs
+++ b/site/dashboard/pages/home.ejs
@@ -15,7 +15,7 @@
 
   <div class="center-screen" style="min-height: 50vh;">
     <div class="card text-center text-white bg-dark mb-4 mx-auto h4"
-      style="display: flex;justify-content: center;width: 30rem;">
+      style="display: flex;justify-content: center;">
       <div class="card-header">
         <b>Login with Discord</b>
       </div>
