--- a/site/dashboard/pages/index.ejs
+++ b/site/dashboard/pages/index.ejs
@@ -14,9 +14,10 @@
     
     <div class="table-responsive" style="border: none;">
 
-    <table style="margin-top: 1rem;width: 90%;  margin: auto;" class="table table-hover table-dark h5 table-curved">
+    <table style="margin-top: 1rem;width: 90%;  margin: auto;text-align: center;" class="table table-hover table-dark h5 table-curved">
         <thead>
             <tr style="border-top: none;">
+                <th scope="col">#</th>
                 <th scope="col">Key</th>
                 <th scope="col">Value</th>
             </tr>
@@ -24,7 +25,8 @@
         <tbody>
         <% values.forEach(function(value) { %>
         <tr>
-            <th scope="row"><%= value.key %></th>
+            <th scope="row"><%= value.index %></th>
+            <th><%= value.key %></th>
             <th><%= value.value %></th>
         </tr>
         <% }); %>
