--- a/site/dashboard/partials/head.ejs
+++ b/site/dashboard/partials/head.ejs
@@ -46,9 +46,11 @@
         bottom: 0;
         width: 100%;
     }
-    body, html {
-  height: 100%;
-}
+
+    body,
+    html {
+        height: 100%;
+    }
 
     .center-screen {
         display: flex;
@@ -69,7 +71,8 @@
 
     .bg {
         /* The image used */
-        background-image: url("./../images/background.jpg") !important;;
+        background-image: url("./../images/background.jpg") !important;
+        ;
 
         /* Full height */
         height: 100%;
@@ -81,29 +84,35 @@
     }
 
     .table-curved {
-    border-collapse: separate;
-}
-.table-curved {
-    border-radius: 6px;
-    border-left:0px;
-}
+        border-collapse: separate;
+    }
 
-.table-curved th {
-    border-top: none;
-}
-.table-curved th:first-child {
-    border-radius: 6px 0 0 0;
-}
-.table-curved th:last-child {
-    border-radius: 0 6px 0 0;
-}
-.table-curved th:only-child{
-    border-radius: 6px 6px 0 0;
-}
-.table-curved tr:last-child td:first-child {
-    border-radius: 0 0 0 6px;
-}
-.table-curved tr:last-child td:last-child {
-    border-radius: 0 0 6px 0;
-}
+    .table-curved {
+        border-radius: 6px;
+        border-left: 0px;
+    }
+
+    .table-curved th {
+        border-top: none;
+    }
+
+    .table-curved th:first-child {
+        border-radius: 6px 0 0 0;
+    }
+
+    .table-curved th:last-child {
+        border-radius: 0 6px 0 0;
+    }
+
+    .table-curved th:only-child {
+        border-radius: 6px 6px 0 0;
+    }
+
+    .table-curved tr:last-child td:first-child {
+        border-radius: 0 0 0 6px;
+    }
+
+    .table-curved tr:last-child td:last-child {
+        border-radius: 0 0 6px 0;
+    }
 </style>
