--- a/site/dashboard/pages/index.ejs
+++ b/site/dashboard/pages/index.ejs
@@ -30,9 +30,9 @@
         <% values.forEach(function(value) { %>
         <tr>
             <th scope="row"><%= value.index %></th>
-            <th><%= value.name %></th>
-            <th><%= value.id %></th>
-            <th><%= value.next_date %></th>
+            <th>Placeholder</th>
+            <th><%= value.discord_id %></th>
+            <th><%= value.next_payment %></th>
             <th><%= value.sub_id %></th>
             <th><%= value.cust_id %></th>
             <th><%=  %></th>
