--- a/site/dashboard/pages/index.ejs
+++ b/site/dashboard/pages/index.ejs
@@ -30,7 +30,7 @@
         <% values.forEach(function(value) { %>
         <tr>
             <th scope="row"><%= value.index %></th>
-            <th>Placeholder</th>
+            <th><%= value.discord_name %></th>
             <th><%= value.discord_id %></th>
             <th><%= value.next_payment %></th>
             <th><%= value.sub_id %></th>
