--- a/site/dashboard/pages/index.ejs
+++ b/site/dashboard/pages/index.ejs
@@ -35,7 +35,7 @@
             <th><%= value.next_payment %></th>
             <th><%= value.sub_id %></th>
             <th><%= value.cust_id %></th>
-            <th><%=  %></th>
+            <th>None</th>
         </tr>
         <% }); %>
         </tbody>
