--- a/site/dashboard/partials/footer.ejs
+++ b/site/dashboard/partials/footer.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/footer.ejs -->
 <footer class="bg-dark">
 <section class="copyright py-4 text-center text-white bg-dark">
-    <div class="container footer h4 bg-dark" style="text-align: center;height: 50vmin;padding: 1rem;">
+    <div class="container footer h4 bg-dark" style="text-align: center;padding: 1rem;">
       <small>Copyright &copy; ReachedIO 2019</small>
     </div>
   </section>
