--- a/site/dashboard/partials/head.ejs
+++ b/site/dashboard/partials/head.ejs
@@ -34,7 +34,9 @@
     back {
         background: rgb(59, 59, 59) !important;
     }
-
+    body {
+        background: rgb(59, 59, 59) !important;
+    }
     /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
 
     body,
