--- a/site/dashboard/pages/index.ejs
+++ b/site/dashboard/pages/index.ejs
@@ -12,42 +12,42 @@
 </header>
 
 <div class="container-fluid bg">
-        <br>
 
-<div class="table-responsive" style="border: none;">
+    <div class="table-responsive" style="border: none;padding-top: 3rem;padding-bottom: 3rem;">
 
-    <table style="margin-top: 1rem;width: 90%;  margin: auto;text-align: center;vertical-align: middle;"
-        class="table table-hover table-dark table-curved">
-        <thead>
-            <tr class="h4" style="border-top: none;">
-                <th scope="col" style="vertical-align: middle;">#</th>
-                <th scope="col" style="vertical-align: middle;">Discord Name</th>
-                <th scope="col" style="vertical-align: middle;">Discord ID</th>
-                <th scope="col" style="vertical-align: middle;">Next Payment Date</th>
-                <th scope="col" style="vertical-align: middle;">Subscription ID</th>
-                <th scope="col" style="vertical-align: middle;">Customer ID</th>
-                <th scope="col" style="vertical-align: middle;">Kick</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% values.forEach(function(value){ %>
-            <tr class="h5">
-                <th scope="row" style="vertical-align: middle;"><%= value.index %></th>
-                <th style="vertical-align: middle;"><%= value.discord_name %></th>
-                <th style="vertical-align: middle;"><%= value.discord_id %></th>
-                <th style="vertical-align: middle;"><%= value.next_payment %></th>
-                <th style="vertical-align: middle;"><%= value.sub_id %></th>
-                <th style="vertical-align: middle;"><%= value.cust_id %></th>
-                <th style="vertical-align: middle;">
-                        <button type="button" class="btn btn-danger" onclick="alert('That feature has not been implemented yet. Index: ' + <%=value.index%>);">Remove</button>
+        <table style="width: 90%; padding: 0.5rem; margin: auto;text-align: center;vertical-align: middle;"
+            class="table table-hover table-dark table-curved">
+            <thead>
+                <tr class="h4" style="border-top: none;">
+                    <th scope="col" style="vertical-align: middle;">#</th>
+                    <th scope="col" style="vertical-align: middle;">Discord Name</th>
+                    <th scope="col" style="vertical-align: middle;">Discord ID</th>
+                    <th scope="col" style="vertical-align: middle;">Next Payment Date</th>
+                    <th scope="col" style="vertical-align: middle;">Subscription ID</th>
+                    <th scope="col" style="vertical-align: middle;">Customer ID</th>
+                    <th scope="col" style="vertical-align: middle;">Kick</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% values.forEach(function(value){ %>
+                <tr class="h5">
+                    <th scope="row" style="vertical-align: middle;"><%= value.index %></th>
+                    <th style="vertical-align: middle;"><%= value.discord_name %></th>
+                    <th style="vertical-align: middle;"><%= value.discord_id %></th>
+                    <th style="vertical-align: middle;"><%= value.next_payment %></th>
+                    <th style="vertical-align: middle;"><%= value.sub_id %></th>
+                    <th style="vertical-align: middle;"><%= value.cust_id %></th>
+                    <th style="vertical-align: middle;">
+                        <button type="button" class="btn btn-danger"
+                            onclick="alert('That feature has not been implemented yet. Index: ' + <%=value.index%>);">Remove</button>
                     </th>
-                <% }) %>
+                    <% }) %>
 
-            </tr>
-        </tbody>
-    </table>
-    <br>
-</div></div>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 <% include ../partials/footer %>
 
 </html>
