--- a/site/dashboard/pages/error.ejs
+++ b/site/dashboard/pages/error.ejs
@@ -20,10 +20,10 @@
     <div class="card text-center text-white bg-dark mb-4 mx-auto"
       style="display: flex;justify-content: center;">
       <div class="card-header  h1">
-        <b>Unauthorized</b>
+        <b>Error</b>
       </div>
       <div class="card-body h3">
-        This site is not available yet!
+        This page does not exist!
       </div>
     </div>
   </div>
