--- a/site/dashboard/pages/user.ejs
+++ b/site/dashboard/pages/user.ejs
@@ -5,8 +5,10 @@
 
 <head>
   <% include ../partials/head %>
+  <title> 
+    Error
+  </title>
 </head>
-
 <div class="bg" style="min-height: 100vh;">
   <div class="container-fluid">
     <a class="navbar-brand" href=<%- rootUrl -%>>
@@ -15,14 +17,13 @@
   </div>
 
   <div class="center-screen" style="min-height: 50vh;">
-    <div class="card text-center text-white bg-dark mb-4 mx-auto h4"
+    <div class="card text-center text-white bg-dark mb-4 mx-auto"
       style="display: flex;justify-content: center;">
-      <div class="card-header">
-        <b>Login with Discord</b>
+      <div class="card-header  h1">
+        <b>Unauthorized</b>
       </div>
-      <div class="card-body">
-        <a href='/login' class="btn" style="background-color: #2C2F33;"><img src="../images/discord.png"
-            width="180rem" /></a>
+      <div class="card-body h3">
+        This site is not available yet!
       </div>
     </div>
   </div>
