--- a/site/dashboard/pages/index.ejs
+++ b/site/dashboard/pages/index.ejs
@@ -5,49 +5,75 @@
 
 <head>
     <% include ../partials/head %>
+    <script>
+        
+        function submitButton(id, name, date) {
+            $.ajax({
+                type: 'post',
+                url: 'remove',
+                data: `discord_id=${id}`,
+                success: function () {
+                    $(".alert").show();
+                    document.querySelector('#alert-text').textContent = name;
+                    document.querySelector('#date-text').textContent = date;
+                }
+            });
+        }
+    </script>
 </head>
 
-<header>
-    <% include ../partials/header %>
-</header>
-
 <div class="container-fluid bg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href=<%- rootUrl -%>>
+            <img src="./../images/logo.svg" class="float-left img-fluid image-cropper"
+                style="width: 5rem; margin: 1rem;">
+        </a>
+    </div>
+    <div style="  max-height: 1000px;overflow: auto;">
+        <div class="table-responsive" style="border: none;padding-top: 3rem;padding-bottom: 3rem;">
+            <table style="width: 90%; padding: 0.5rem; margin: auto;text-align: center;vertical-align: middle;"
+                class="table table-hover table-dark table-curved">
+                <thead>
+                    <tr class="h5" style="border-top: none;">
+                        <th scope="col" style="vertical-align: middle;">#</th>
+                        <th scope="col" style="vertical-align: middle;">Discord Name</th>
+                        <th scope="col" style="vertical-align: middle;">Discord ID</th>
+                        <th scope="col" style="vertical-align: middle;">Next Payment Date</th>
+                        <th scope="col" style="vertical-align: middle;">Days Left</th>
+                        <th scope="col" style="vertical-align: middle;">Subscription ID</th>
+                        <th scope="col" style="vertical-align: middle;">Customer ID</th>
+                        <th scope="col" style="vertical-align: middle;">Kick</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% users.forEach(function(user){ %>
+                    <tr class="h6">
+                        <th scope="row" style="vertical-align: middle;"><%= user.index %></th>
+                        <th style="vertical-align: middle;"><%= user.discord_name %></th>
+                        <th style="vertical-align: middle;"><%= user.discord_id %></th>
+                        <th style="vertical-align: middle;"><%= user.next_payment %></th>
+                        <th style="vertical-align: middle;"><%= user.days_left %></th>
+                        <th style="vertical-align: middle;"><%= user.sub_id %></th>
+                        <th style="vertical-align: middle;"><%= user.cust_id %></th>
+                        <th style="vertical-align: middle;">
+                            <button type="button" onclick="submitButton('<%= user.discord_id %>', '<%= user.discord_name %>', '<%= user.next_payment %>')"
+                                class="btn btn-danger">Remove</button>
+                        </th>
+                        <% }) %>
 
-    <div class="table-responsive" style="border: none;padding-top: 3rem;padding-bottom: 3rem;">
-
-        <table style="width: 90%; padding: 0.5rem; margin: auto;text-align: center;vertical-align: middle;"
-            class="table table-hover table-dark table-curved">
-            <thead>
-                <tr class="h5" style="border-top: none;">
-                    <th scope="col" style="vertical-align: middle;">#</th>
-                    <th scope="col" style="vertical-align: middle;">Discord Name</th>
-                    <th scope="col" style="vertical-align: middle;">Discord ID</th>
-                    <th scope="col" style="vertical-align: middle;">Next Payment Date</th>
-                    <th scope="col" style="vertical-align: middle;">Subscription ID</th>
-                    <th scope="col" style="vertical-align: middle;">Customer ID</th>
-                    <th scope="col" style="vertical-align: middle;">Kick</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% values.forEach(function(value){ %>
-                <tr class="h6">
-                    <th scope="row" style="vertical-align: middle;"><%= value.index %></th>
-                    <th style="vertical-align: middle;"><%= value.discord_name %></th>
-                    <th style="vertical-align: middle;"><%= value.discord_id %></th>
-                    <th style="vertical-align: middle;"><%= value.next_payment %></th>
-                    <th style="vertical-align: middle;"><%= value.sub_id %></th>
-                    <th style="vertical-align: middle;"><%= value.cust_id %></th>
-                    <th style="vertical-align: middle;">
-                        <button type="button" class="btn btn-danger"
-                            onclick="alert('That feature has not been implemented yet. Index: ' + <%=value.index%>);">Remove</button>
-                    </th>
-                    <% }) %>
-
-                </tr>
-            </tbody>
-        </table>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+
+<div class="alert alert-danger alert-dismissible fade show" style="display: none;" role="alert">
+    <strong id="alert-text">Discord User</strong>'s subscription has been cancelled. They will be removed from your server on <strong id="date-text">Date</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 <% include ../partials/footer %>
 
 </html>
