--- a/site/dashboard/pages/not_paid.ejs
+++ b/site/dashboard/pages/not_paid.ejs
@@ -11,7 +11,7 @@
 </head>
 <div class="bg" style="min-height: 100vh;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://www.reachedcoding.com/">
+    <a class="navbar-brand" href=<%- rootUrl -%>>
       <img src="./../images/logo.svg" class="float-left img-fluid image-cropper" style="width: 5rem; margin: 2rem;">
     </a>
   </div>
