--- a/site/dashboard/pages/not_paid.ejs
+++ b/site/dashboard/pages/not_paid.ejs
@@ -23,7 +23,7 @@
         <b>Unauthorized</b>
       </div>
       <div class="card-body h3">
-          You have not purchased a subscription! Please contact specials#0001 on discord for further details!
+          You have not purchased a subscription!<br>Please contact specials#0001 on discord for further details!
       </div>
     </div>
   </div>
