--- a/site/dashboard/pages/user.ejs
+++ b/site/dashboard/pages/user.ejs
@@ -1,33 +1,56 @@
-<!-- views/pages/about.ejs -->
-
 <!DOCTYPE html>
-<html lang="en">
-
+<!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Sun Dec 08 2019 00:02:21 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5dec0ab8e942e7705f3f8ffc" data-wf-site="5dec0ab8e942e734c53f8ffb">
 <head>
-  <% include ../partials/head %>
-  <title> 
-    Error
-  </title>
+  <meta charset="utf-8">
+  <title>Shivam&#x27;s Blank Site</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="Webflow" name="generator">
+  <link href="../css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="../css/webflow.css" rel="stylesheet" type="text/css">
+  <link href="../css/shivams-blank-site-48f618.webflow.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Bitter:400,700,400italic"]  }});</script>
+  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <link href="../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="../images/webclip.png" rel="apple-touch-icon">
+  <script>
+        
+    function submitButton() {
+        $.ajax({
+            type: 'post',
+            url: 'pause-subscription',
+            success: function () {
+                $(".alert").show();
+                document.querySelector('#alert-text').textContent = name;
+                document.querySelector('#date-text').textContent = date;
+            }
+        });
+    }
+</script>
 </head>
-<div class="bg" style="min-height: 100vh;">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="https://www.reachedcoding.com/">
-      <img src="./../images/logo.svg" class="float-left img-fluid image-cropper" style="width: 5rem; margin: 2rem;">
-    </a>
+<body class="body">
+  <div class="columns w-row">
+    <div class="column-2 w-col w-col-6"><img src="../images/Discord-Bot-Pic.png" width="70" alt="Group Logo" class="image"></div>
+    <div class="column w-col w-col-6"><a href="/logout" class="button-3 w-button">Logout</a></div>
   </div>
-
-  <div class="center-screen" style="min-height: 50vh;">
-    <div class="card text-center text-white bg-dark mb-4 mx-auto"
-      style="display: flex;justify-content: center;">
-      <div class="card-header  h1">
-        <b>Unauthorized</b>
-      </div>
-      <div class="card-body h3">
-          You have not purchased a subscription! Please contact specials#0001 on discord for further details!
+  <div>
+    <div class="div-block-3"><img src="../images/logo.png" width="109" srcset="images/logo-p-500.png 500w, images/logo.png 512w" sizes="109px" alt="" class="userimage">
+      <div class="div-block-2"></div>
+      <div class="container-2 w-container">
+        <div class="text-block text-block-2">specials#0001</div>
+        <div class="text-block text-block-2-copy"><strong>Key</strong><br>&lt;%= key %&gt;<br>‍<br><span><strong>Type</strong></span><br>&lt;%= type %&gt;<br><br>Next Charge<br>$&lt;%= next_charge_amount %&gt; will be charged on &lt;%= next_charge_date %&gt;<br>‍<br><br></div>
+        <div class="columns-2 w-row">
+          <div class="w-col w-col-6"><a onclick="submitButton();" class="button4 w-button">Pause Subscription</a></div>
+          <div class="w-col w-col-6"><a href="/logout" class="button5 w-button">Unbind</a></div>
+        </div>
       </div>
     </div>
   </div>
-</div>
-      <% include ../partials/footer %>
-
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="../js/webflow.js" type="text/javascript"></script>
+  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+</body>
 </html>
