--- a/site/dashboard/partials/nav.ejs
+++ b/site/dashboard/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="<%- rootUrl ->">
+    <a class="navbar-brand" href="<%= rootUrl ->">
         <img src="<%- logo -%>" class="float-right img-fluid image-cropper"
             style="width: 5rem; margin: 1rem;">
     </a>
